--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "zustand": "^4.4.3"
   },
