--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "next": "latest",
+    "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
@@ -19,6 +23,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -26,6 +31,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "^8.4.31",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3.3.3",
     "typescript": "latest"
   }
