--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
