--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://namnguyenhoang0903:01202902494@cluster0.umegxah.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GOOGLE_CLIENT_ID=95272656311-dli7amrf8hgeua1h6lsmmfbfle5tu2ba.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+FACEBOOK_CLIENT_ID = 697934539056662
+FACEBOOK_CLIENT_SECRET = 63153c1cd31daf0ad967de0e78166b1a
