--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "next": "latest",
     "next-auth": "^4.23.2",
+    "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
     "react-facebook-login": "^4.1.1",
