--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 DATABASE_URL="mongodb+srv://namnguyenhoang0903:01202902494@cluster0.umegxah.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+NEXTAUTH_URL = "http://localhost:3000"
 
 GOOGLE_CLIENT_ID=95272656311-dli7amrf8hgeua1h6lsmmfbfle5tu2ba.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
