--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GOOGLE_CLIENT_SECRET=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
 
 FACEBOOK_CLIENT_ID = 697934539056662
 FACEBOOK_CLIENT_SECRET = 63153c1cd31daf0ad967de0e78166b1a
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dsiwrpkjx"
