--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/leaflet": "^1.9.7",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "next": "latest",
     "next-auth": "^4.23.2",
     "next-cloudinary": "^4.27.0",
     "query-string": "^8.1.0",
     "react": "latest",
+    "react-date-range": "^1.4.0",
     "react-dom": "latest",
     "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.47.0",
@@ -34,6 +36,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/node": "latest",
     "@types/react": "latest",
+    "@types/react-date-range": "^1.4.7",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.16",
     "eslint": "latest",
