--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
+    "@greatsumini/react-facebook-login": "^3.3.3",
     "@prisma/client": "^5.4.2",
     "@types/leaflet": "^1.9.7",
     "axios": "^1.5.1",
