--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
     "@greatsumini/react-facebook-login": "^3.3.3",
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.16.1",
     "@types/leaflet": "^1.9.7",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
-    "next": "latest",
+    "mongodb": "^6.8.0",
+    "next": "^14.2.4",
     "next-auth": "^4.23.2",
     "next-cloudinary": "^4.27.0",
     "query-string": "^8.1.0",
@@ -43,7 +44,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "^8.4.31",
-    "prisma": "^5.4.2",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.3.3",
     "typescript": "latest"
   }
