--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/leaflet": "^1.9.7",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
-    "next": "^14.2.4",
+    "next": "^13.5.6",
     "next-auth": "^4.23.2",
     "next-cloudinary": "^4.28.0",
     "query-string": "^8.1.0",
