--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
@@ -15,6 +16,7 @@
     "@types/leaflet": "^1.9.7",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "bufferutil": "^4.0.9",
     "cloudinary": "^2.2.0",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
@@ -32,6 +34,9 @@
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.7",
     "react-spinners": "^0.13.8",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "utf-8-validate": "^6.0.5",
     "world-countries": "^5.0.0",
     "zustand": "^4.4.3"
   },
@@ -47,6 +52,7 @@
     "postcss": "^8.4.31",
     "prisma": "^5.16.1",
     "tailwindcss": "^3.3.3",
+    "tsx": "^4.19.4",
     "typescript": "latest"
   }
 }
